--- a/index.html
+++ b/index.html
@@ -16,47 +16,23 @@
     <main>
         <section id="dashboard-section" class="app-section">
             <h2>Dashboard</h2>
-            </section>
+            <div id="dashboard-summary">
+                </div>
+        </section>
 
         <section id="income-section" class="app-section">
             <h2>Income Sources</h2>
             <form id="income-form">
-                <div class="form-group">
-                    <label for="income-type">Type:</label>
-                    <select id="income-type" required>
-                        <option value="">-- Select a Type --</option>
-                        <option value="Pension">Pension</option>
-                        <option value="TSP">TSP</option>
-                        <option value="TSP Supplement">TSP Supplement</option>
-                        <option value="Social Security">Social Security</option>
-                        <option value="Investment">Investment Dividend</option>
-                        <option value="Other">Other</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="income-name">Description / Name:</label>
-                    <input type="text" id="income-name" placeholder="e.g., Vincent's TSP" required>
-                </div>
-                <div class="form-group">
-                    <label for="income-interval">Payment Interval:</label>
-                    <select id="income-interval" required>
-                        <option value="monthly">Monthly</option>
-                        <option value="annually">Annually</option>
-                        <option value="quarterly">Quarterly</option>
-                        <option value="bi-weekly">Bi-Weekly</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="income-amount">Payment Amount:</label>
-                    <input type="number" id="income-amount" placeholder="1500" min="0" step="0.01" required>
-                </div>
+                <div class="form-group"><label for="income-type">Type:</label><select id="income-type" required><option value="">-- Select a Type --</option><option value="Pension">Pension</option><option value="TSP">TSP</option><option value="TSP Supplement">TSP Supplement</option><option value="Social Security">Social Security</option><option value="Investment">Investment Dividend</option><option value="Other">Other</option></select></div>
+                <div class="form-group"><label for="income-name">Description / Name:</label><input type="text" id="income-name" placeholder="e.g., Vincent's TSP" required></div>
+                <div class="form-group"><label for="income-interval">Payment Interval:</label><select id="income-interval" required><option value="monthly">Monthly</option><option value="annually">Annually</option><option value="quarterly">Quarterly</option><option value="bi-weekly">Bi-Weekly</option></select></div>
+                <div class="form-group"><label for="income-amount">Payment Amount:</label><input type="number" id="income-amount" placeholder="1500" min="0" step="0.01" required></div>
                 <button type="submit">Add Income</button>
             </form>
             <hr class="divider">
             <div id="income-list-container">
                 <h3>Current Incomes</h3>
-                <ul id="income-list">
-                    </ul>
+                <ul id="income-list"></ul>
             </div>
         </section>
 
