updating for expense interval

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-
     <header>
         <h1>Retirement Finance Tracker</h1>
     </header>
-
     <main>
         <section id="dashboard-section" class="app-section">
             <h2>Dashboard</h2>
@@ -30,51 +28,25 @@
                 <button type="submit">Add Income</button>
             </form>
             <hr class="divider">
-            <div id="income-list-container">
-                <h3>Current Incomes</h3>
-                <ul id="income-list" class="item-list"></ul>
-            </div>
+            <div id="income-list-container"><h3>Current Incomes</h3><ul id="income-list" class="item-list"></ul></div>
         </section>
 
         <section id="expenses-section" class="app-section">
             <h2>Expense Log</h2>
             <form id="expense-form">
-                <div class="form-group">
-                    <label for="expense-category">Category:</label>
-                    <select id="expense-category" required>
-                        <option value="">-- Select a Category --</option>
-                        <option value="Housing">Housing</option>
-                        <option value="Groceries">Groceries</option>
-                        <option value="Utilities">Utilities</option>
-                        <option value="Transport">Transport</option>
-                        <option value="Health">Health</option>
-                        <option value="Entertainment">Entertainment</option>
-                        <option value="Other">Other</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="expense-name">Description / Name:</label>
-                    <input type="text" id="expense-name" placeholder="e.g., Electric Bill" required>
-                </div>
-                <div class="form-group">
-                    <label for="expense-amount">Amount:</label>
-                    <input type="number" id="expense-amount" placeholder="100" min="0" step="0.01" required>
-                </div>
+                <div class="form-group"><label for="expense-category">Category:</label><select id="expense-category" required><option value="">-- Select a Category --</option><option value="Housing">Housing</option><option value="Groceries">Groceries</option><option value="Utilities">Utilities</option><option value="Transport">Transport</option><option value="Health">Health</option><option value="Entertainment">Entertainment</option><option value="Other">Other</option></select></div>
+                <div class="form-group"><label for="expense-name">Description / Name:</label><input type="text" id="expense-name" placeholder="e.g., Electric Bill" required></div>
+                <div class="form-group"><label for="expense-interval">Payment Interval:</label><select id="expense-interval" required><option value="monthly">Monthly</option><option value="annually">Annually</option><option value="quarterly">Quarterly</option><option value="bi-weekly">Bi-Weekly</option><option value="weekly">Weekly</option></select></div>
+                <div class="form-group"><label for="expense-amount">Amount:</label><input type="number" id="expense-amount" placeholder="100" min="0" step="0.01" required></div>
                 <button type="submit">Add Expense</button>
             </form>
             <hr class="divider">
-            <div id="expense-list-container">
-                <h3>Current Expenses</h3>
-                <ul id="expense-list" class="item-list">
-                    </ul>
-            </div>
+            <div id="expense-list-container"><h3>Current Expenses</h3><ul id="expense-list" class="item-list"></ul></div>
         </section>
     </main>
-
     <footer>
         <button id="import-btn">Import Data</button>
         <button id="export-btn">Export Data</button>
     </footer>
-
 </body>
 </html>
