adding html and css for modal

--- a/index.html
+++ b/index.html
@@ -48,5 +48,19 @@
         <button id="import-btn">Import Data</button>
         <button id="export-btn">Export Data</button>
     </footer>
+<div id="app-modal" class="modal-hidden">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2 id="modal-title">Modal Title</h2>
+            <button id="modal-close-btn" class="delete-btn">X</button>
+        </div>
+        <div id="modal-body">
+            </div>
+        <div class="modal-footer">
+            <button id="modal-cancel-btn" class="btn-secondary">Cancel</button>
+            <button id="modal-save-btn" class="btn-primary">Save</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
