--- a/index.html
+++ b/index.html
@@ -14,21 +14,19 @@
     <main>
         <section id="dashboard-section" class="app-section">
             <h2>Dashboard</h2>
-            <div id="dashboard-summary">
-                </div>
+            <div id="dashboard-summary"></div>
         </section>
 
         <section id="income-section" class="app-section">
             <h2>Income Sources</h2>
-            <form id="income-form">
-                <div class="form-group"><label for="income-type">Type:</label><select id="income-type" required><option value="">-- Select a Type --</option><option value="Pension">Pension</option><option value="TSP">TSP</option><option value="TSP Supplement">TSP Supplement</option><option value="Social Security">Social Security</option><option value="Investment">Investment Dividend</option><option value="Other">Other</option></select></div>
-                <div class="form-group"><label for="income-name">Description / Name:</label><input type="text" id="income-name" placeholder="e.g., Vincent's TSP" required></div>
-                <div class="form-group"><label for="income-interval">Payment Interval:</label><select id="income-interval" required><option value="monthly">Monthly</option><option value="annually">Annually</option><option value="quarterly">Quarterly</option><option value="bi-weekly">Bi-Weekly</option></select></div>
-                <div class="form-group"><label for="income-amount">Payment Amount:</label><input type="number" id="income-amount" placeholder="1500" min="0" step="0.01" required></div>
-                <button type="submit">Add Income</button>
-            </form>
+            <div class="section-controls">
+                <button id="show-income-modal-btn" class="btn-primary">Add Income</button>
+            </div>
             <hr class="divider">
-            <div id="income-list-container"><h3>Current Incomes</h3><ul id="income-list" class="item-list"></ul></div>
+            <div id="income-list-container">
+                <h3>Current Incomes</h3>
+                <ul id="income-list" class="item-list"></ul>
+            </div>
         </section>
 
         <section id="expenses-section" class="app-section">
@@ -44,23 +42,24 @@
             <div id="expense-list-container"><h3>Current Expenses</h3><ul id="expense-list" class="item-list"></ul></div>
         </section>
     </main>
+
     <footer>
         <button id="import-btn">Import Data</button>
         <button id="export-btn">Export Data</button>
     </footer>
-<div id="app-modal" class="modal-hidden">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h2 id="modal-title">Modal Title</h2>
-            <button id="modal-close-btn" class="delete-btn">X</button>
-        </div>
-        <div id="modal-body">
+
+    <div id="app-modal" class="modal-hidden">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="modal-title">Modal Title</h2>
+                <button id="modal-close-btn" class="delete-btn">X</button>
             </div>
-        <div class="modal-footer">
-            <button id="modal-cancel-btn" class="btn-secondary">Cancel</button>
-            <button id="modal-save-btn" class="btn-primary">Save</button>
+            <div id="modal-body"></div>
+            <div class="modal-footer">
+                <button id="modal-cancel-btn" class="btn-secondary">Cancel</button>
+                <button id="modal-save-btn" class="btn-primary">Save</button>
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
