--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Retirement Finance Tracker</h1>
-    </header>
+    <header><h1>Retirement Finance Tracker</h1></header>
     <main>
         <section id="dashboard-section" class="app-section">
             <h2>Dashboard</h2>
             <div id="dashboard-summary"></div>
         </section>
-
         <section id="income-section" class="app-section">
             <h2>Income Sources</h2>
             <div class="section-controls">
@@ -28,37 +25,24 @@
                 <ul id="income-list" class="item-list"></ul>
             </div>
         </section>
-
         <section id="expenses-section" class="app-section">
             <h2>Expense Log</h2>
-            <form id="expense-form">
-                <div class="form-group"><label for="expense-category">Category:</label><select id="expense-category" required><option value="">-- Select a Category --</option><option value="Housing">Housing</option><option value="Groceries">Groceries</option><option value="Utilities">Utilities</option><option value="Transport">Transport</option><option value="Health">Health</option><option value="Entertainment">Entertainment</option><option value="Other">Other</option></select></div>
-                <div class="form-group"><label for="expense-name">Description / Name:</label><input type="text" id="expense-name" placeholder="e.g., Electric Bill" required></div>
-                <div class="form-group"><label for="expense-interval">Payment Interval:</label><select id="expense-interval" required><option value="monthly">Monthly</option><option value="annually">Annually</option><option value="quarterly">Quarterly</option><option value="bi-weekly">Bi-Weekly</option><option value="weekly">Weekly</option></select></div>
-                <div class="form-group"><label for="expense-amount">Amount:</label><input type="number" id="expense-amount" placeholder="100" min="0" step="0.01" required></div>
-                <button type="submit">Add Expense</button>
-            </form>
+            <div class="section-controls">
+                <button id="show-expense-modal-btn" class="btn-primary">Add Expense</button>
+            </div>
             <hr class="divider">
-            <div id="expense-list-container"><h3>Current Expenses</h3><ul id="expense-list" class="item-list"></ul></div>
+            <div id="expense-list-container">
+                <h3>Current Expenses</h3>
+                <ul id="expense-list" class="item-list"></ul>
+            </div>
         </section>
     </main>
-
-    <footer>
-        <button id="import-btn">Import Data</button>
-        <button id="export-btn">Export Data</button>
-    </footer>
-
+    <footer></footer>
     <div id="app-modal" class="modal-hidden">
         <div class="modal-content">
-            <div class="modal-header">
-                <h2 id="modal-title">Modal Title</h2>
-                <button id="modal-close-btn" class="delete-btn">X</button>
-            </div>
+            <div class="modal-header"><h2 id="modal-title">Modal Title</h2><button id="modal-close-btn" class="delete-btn">X</button></div>
             <div id="modal-body"></div>
-            <div class="modal-footer">
-                <button id="modal-cancel-btn" class="btn-secondary">Cancel</button>
-                <button id="modal-save-btn" class="btn-primary">Save</button>
-            </div>
+            <div class="modal-footer"><button id="modal-cancel-btn" class="btn-secondary">Cancel</button><button id="modal-save-btn" class="btn-primary">Save</button></div>
         </div>
     </div>
 </body>
