updating after troubleshooting

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <button id="import-btn">Import Data</button>
+        <button id="export-btn">Export Data</button>
+    </footer>
     <div id="app-modal" class="modal-hidden">
         <div class="modal-content">
             <div class="modal-header"><h2 id="modal-title">Modal Title</h2><button id="modal-close-btn" class="delete-btn">X</button></div>
