updating for import

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <footer>
         <button id="import-btn">Import Data</button>
         <button id="export-btn">Export Data</button>
+        <input type="file" id="import-file-input" accept=".json" style="display: none;">
     </footer>
     <div id="app-modal" class="modal-hidden">
         <div class="modal-content">
