updating for DB use

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retirement Finance Tracker</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
-    <header><h1>Retirement Finance Tracker</h1></header>
+    <header>
+        <h1>Retirement Finance Tracker</h1>
+        <div id="user-status"></div>
+    </header>
     <main>
         <section id="dashboard-section" class="app-section">
             <h2>Dashboard</h2>
