--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
     </header>
     <main>
         <section id="dashboard-section" class="app-section">
-            <h2>Dashboard</h2>
-            <div id="dashboard-summary">
-                </div>
+            <div class="section-header">
+                <h2>Dashboard</h2>
+                <button id="toggle-dashboard-btn" title="Toggle Dashboard View">↔️</button>
+            </div>
+            <div id="dashboard-summary"></div>
             <div class="chart-container">
                 <canvas id="expense-chart"></canvas>
             </div>
         </section>
 
         <section id="income-section" class="app-section">
-            <h2>Income Sources</h2>
+            <div class="section-header">
+                <h2>Income Sources</h2>
+            </div>
             <div class="section-controls">
                 <button id="show-income-modal-btn" class="btn-primary">Add Income</button>
             </div>
@@ -37,7 +41,9 @@
         </section>
 
         <section id="expenses-section" class="app-section">
-            <h2>Expense Log</h2>
+            <div class="section-header">
+                <h2>Expense Log</h2>
+            </div>
             <div class="section-controls">
                 <button id="show-expense-modal-btn" class="btn-primary">Add Expense</button>
             </div>
