--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                     </select>
                 </div>
             </div>
+            <div class="modal-footer">
+                <button id="save-settings-btn" class="btn-primary">Save Settings</button>
+            </div>
         </div>
     </div>
 </body>
