--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Retirement Finance Tracker</h1>
         <div id="user-status"></div>
-        <button id="settings-btn" title="Settings">⚙️</button>
+        <!--<button id="settings-btn" title="Settings">⚙️</button>-->
     </header>
     <main>
         <section id="dashboard-section" class="app-section">
@@ -66,7 +66,7 @@
             <div class="modal-footer"><button id="modal-cancel-btn" class="btn-secondary">Cancel</button><button id="modal-save-btn" class="btn-primary">Save</button></div>
         </div>
     </div>
-    <div id="settings-modal" class="modal modal-hidden">
+    <!--<div id="settings-modal" class="modal modal-hidden">
         <div class="modal-content">
             <div class="modal-header">
                 <h2 id="settings-modal-title">Settings</h2>
@@ -86,6 +86,6 @@
                 <button id="save-settings-btn" class="btn-primary">Save Settings</button>
             </div>
         </div>
-    </div>
+    </div>-->
 </body>
 </html>
