--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retirement Finance Tracker</title>
+    <title>Sunflower Retirement</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -11,9 +11,14 @@
 </head>
 <body>
     <header>
-        <h1>Retirement Finance Tracker</h1>
+        <h1>Sunflower Retirement</h1>
         <div id="user-status"></div>
-        <!--<button id="settings-btn" title="Settings">⚙️</button>-->
+        <div class="theme-switch-wrapper">
+            <label class="theme-switch" for="dark-mode-toggle">
+                <input type="checkbox" id="dark-mode-toggle" />
+                <span class="slider round"></span>
+            </label>
+        </div>
     </header>
     <main>
         <section id="dashboard-section" class="app-section">
@@ -57,35 +62,15 @@
     </main>
 
     <footer>
-    </footer>
+        </footer>
 
-    <div id="app-modal" class="modal-hidden">
+    <div id="app-modal" class="modal modal-hidden">
         <div class="modal-content">
             <div class="modal-header"><h2 id="modal-title">Modal Title</h2><button id="modal-close-btn" class="delete-btn">X</button></div>
             <div id="modal-body"></div>
             <div class="modal-footer"><button id="modal-cancel-btn" class="btn-secondary">Cancel</button><button id="modal-save-btn" class="btn-primary">Save</button></div>
         </div>
     </div>
-    <!--<div id="settings-modal" class="modal modal-hidden">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2 id="settings-modal-title">Settings</h2>
-                <button id="settings-modal-close-btn" class="delete-btn">X</button>
-            </div>
-            <div id="settings-modal-body">
-                <div class="theme-switcher-container">
-                    <label for="theme-switcher">Theme:</label>
-                    <select id="theme-switcher">
-                        <option value="default">Default Blue</option>
-                        <option value="sunflower">Sunflower</option>
-                        <option value="dark">Dark Mode</option>
-                    </select>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button id="save-settings-btn" class="btn-primary">Save Settings</button>
-            </div>
-        </div>
-    </div>-->
+
 </body>
 </html>
