--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
     </main>
 
     <footer>
+        <div class="footer-content">
+            <span class="copyright">© <span id="current-year"></span> Sunflower Applications Inc.</span>
+            <a href="mailto:vincentzeto@live.com" class="contact-link">Contact Us</a>
+            <span class="version">v1.0.0</span>
+        </div>
         </footer>
 
     <div id="app-modal" class="modal modal-hidden">
