--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <img src="./SunflowerApplications.png" alt="Sunflower Applications logo" class="footer-logo">
                 <span class="copyright">© <span id="current-year"></span> Sunflower Applications Inc.</span>
             </div>
-            <a href="mailto:zetovincent@gmail.com" class="contact-link">Contact Us</a>
+            <!--<a href="mailto:zetovincent@gmail.com" class="contact-link">Contact Us</a>-->
             <span class="version">v1.0.0</span>
         </div>
     </footer>
