updating for new login

--- a/index.html
+++ b/index.html
@@ -87,6 +87,30 @@
             <div class="modal-footer"><button id="modal-cancel-btn" class="btn-secondary">Cancel</button><button id="modal-save-btn" class="btn-primary">Save</button></div>
         </div>
     </div>
-
+    <div id="auth-modal" class="modal modal-hidden">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Login or Sign Up</h2>
+                <button id="auth-modal-close-btn" class="delete-btn">X</button>
+            </div>
+            <div class="modal-body">
+                <form id="email-auth-form">
+                    <div class="form-group">
+                        <label for="auth-email">Email:</label>
+                        <input type="email" id="auth-email" placeholder="you@example.com" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="auth-password">Password:</label>
+                        <input type="password" id="auth-password" placeholder="••••••••" required>
+                    </div>
+                    <button type="submit" class="btn-primary">Continue with Email</button>
+                </form>
+                <div class="auth-divider">
+                    <span>or</span>
+                </div>
+                <button id="github-login-btn" class="btn-secondary">Continue with GitHub</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
