--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
                 <h1>Sunflower Retirement</h1>
             </div>
             <div class="header-controls">
-                <div class="theme-switch-wrapper">
-                    <label class="theme-switch" for="dark-mode-toggle">
-                        <input type="checkbox" id="dark-mode-toggle" />
-                        <span class="slider round"></span>
-                    </label>
-                </div>
                 <div id="user-status"></div>
+                <div class="theme-toggle-group">
+                    <span class="theme-label">Dark/Light Mode</span>
+                    <div class="theme-switch-wrapper">
+                        <label class="theme-switch" for="dark-mode-toggle">
+                            <input type="checkbox" id="dark-mode-toggle" />
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
