--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header-controls">
                 <div id="user-status"></div>
                 <div class="theme-toggle-group">
-                    <span class="theme-label">Dark/Light Mode</span>
+                    <span class="theme-label">Light/Dark Mode</span>
                     <div class="theme-switch-wrapper">
                         <label class="theme-switch" for="dark-mode-toggle">
                             <input type="checkbox" id="dark-mode-toggle" />
