updating for transaction log

--- a/index.html
+++ b/index.html
@@ -125,5 +125,12 @@
     </div>
     <div id="notification-container">
     </div>
+    <div id="grid-context-menu" class="context-menu modal-hidden">
+        <ul>
+            <li data-status="paid">Mark Paid (Green)</li>
+            <li data-status="overdue">Mark Overdue (Red)</li>
+            <li data-status="pending">Clear Status (Default)</li>
+        </ul>
+    </div>
 </body>
 </html>
