adding blue highlight

--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
     </div>
     <div id="grid-context-menu" class="context-menu modal-hidden">
         <ul>
-            <li data-status="paid">Mark Paid (Green)</li>
-            <li data-status="overdue">Mark Overdue (Red)</li>
-            <li data-status="pending">Clear Status (Default)</li>
+            <li data-status="paid">Mark Green</li>
+            <li data-status="overdue">Mark Red</li>
+            <li data-status="highlighted">Mark Blue</li>
+            <li data-status="pending">Clear Status</li>
         </ul>
     </div>
 </body>
