--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="dashboard-content-area">
                     <div id="grid-content" class="tab-content active">
-                        <div id="grid-monthly-content" class="grid-layout-container" style="display: none;">
+                        <div id="grid-monthly-content" class="grid-layout-container">
                             </div>
                         
                         <div id="grid-yearly-content" class="grid-layout-container" style="display: none;">
