large EDIT update

--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
     </div>
     <div id="grid-context-menu" class="context-menu modal-hidden">
         <ul>
-            <li data-status="paid">Mark Green</li>
+            <li data-action="edit-amount">Edit Amount...</li>
+            <li data-action="revert-amount">Revert to Original Amount</li>
+            <li class="menu-divider" data-status="paid">Mark Green</li>
             <li data-status="overdue">Mark Red</li>
             <li data-status="highlighted">Mark Blue</li>
             <li data-status="pending">Clear Status</li>
