adding banking sections

--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
             <hr class="divider">
             <div id="expense-list-container"><h3>Current Expenses</h3><ul id="expense-list" class="item-list"></ul></div>
         </section>
+        <section id="banking-section" class="app-section">
+            <div class="section-header"><h2>Banking & Investment</h2></div>
+            <div class="section-controls">
+                <button id="show-account-modal-btn" class="btn-primary">Add Account</button>
+                <button id="show-transfer-modal-btn" class="btn-primary">Add Transfer</button>
+            </div>
+            <hr class="divider">
+            <div id="banking-list-container">
+                <h3>Accounts</h3>
+                <ul id="account-list" class="item-list"></ul>
+                <hr class="divider">
+                <h3>Recurring Transfers</h3>
+                <ul id="transfer-list" class="item-list"></ul>
+            </div>
+        </section>
     </main>
     <footer>
        <div class="footer-content">
