major JS refactor

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="./favicon.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js" defer></script>
+    <script type="module" src="./js/app.js"></script>
 </head>
 <body>
     <header>
@@ -113,7 +113,6 @@
                 <img src="./SunflowerApplications.png" alt="Sunflower Applications logo" class="footer-logo">
                 <span class="copyright">© <span id="current-year"></span> Sunflower Applications Inc.</span>
             </div>
-            <!--<a href="mailto:zetovincent@gmail.com" class="contact-link">Contact Us</a>-->
             <span class="version">v1.0.0</span>
         </div>
     </footer>
