--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                     <div class="view-group" data-tab-group="grids">
                         <button class="view-btn active" data-view="2m">2 Month</button>
                         <button class="view-btn" data-view="6m">6 Month</button>
-                        <button class="view-btn" data-view="yearly">Yearly Summary</button> </div>
+                        <button class="view-btn" data-view="yearly">Yearly Summary</button> 
                     </div>
                     <div class="view-group" data-tab-group="charts" style="display: none;">
                          <button class="view-btn active" data-view="expensePie">Expenses</button>
                          <button class="view-btn" data-view="loanChart">Loans</button>
                     </div>
-                    </div>
+                </div>
                 <div class="dashboard-content-area">
                     <div id="grid-content" class="tab-content active">
                         <div id="grid-monthly-content" class="grid-layout-container">
