updating for multiselect

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                          <div id="loan-chart-content" class="chart-container-wrapper" style="display: none;">
                             <div id="loan-chart-controls" class="chart-controls-container">
                                 <div class="form-group">
-                                    <label for="loan-chart-select">Select Loans:</label>
-                                    <select id="loan-chart-select" multiple></select>
+                                    <label>Select Loans:</label>
+                                    <div id="loan-chart-select-container" class="checkbox-container">
+                                        </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="loan-timeframe-select">Select Timeframe:</label>
