making loans chart default

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         <button class="view-btn" data-view="yearly">Yearly Summary</button> 
                     </div>
                     <div class="view-group" data-tab-group="charts" style="display: none;">
-                         <button class="view-btn active" data-view="expensePie">Expenses</button>
-                         <button class="view-btn" data-view="loanChart">Loans</button>
+                         <button class="view-btn" data-view="expensePie">Expenses</button>
+                         <button class="view-btn active" data-view="loanChart">Loans</button>
                     </div>
                 </div>
                 <div class="dashboard-content-area">
